Nav Section Added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfolio 2.0</title>
     <!-- Fav Icon -->
     <link rel="shortcut icon" href="assets/man.png" type="image/x-icon">
     <!-- Google Fonts -->
@@ -14,8 +14,49 @@
      <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="azeret-mono-font">
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <!-- Nav Section -->
+        <nav id="nav_container">
+            <div>
+                <h2 class="heading4">Md. Tamim</h2>
+            </div>
+            <div>
+                <button class="button1">Download Resume</button>
+            </div>
+        </nav>
+        <!-- Banner Section -->
+        <section id="banner_section">
+            <div>
+                <div>
+                    <img src="assets/Hero-bg.png" alt="Hero">
+                </div>
+                <div>
+                    <h1>"In the near future, I hope to become a Developer."</h1>
+                </div>
+                <div>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </div>
+                <div>
+                    <button class="button2">Contact with me</button>
+                </div>
+            </div>
+        </section>
+    </header>
+    <main>
+        <!-- Web Development Section -->
+        <section id="web_dev_section"></section>
+        <!-- My Inspiration Section -->
+        <section id="my_inspiration_section"></section>
+        <!-- My Current Target Section -->
+        <section id="my_current_target_section"></section>
+        <!-- My Next Target Section -->
+        <section id="my_next_target_section"></section>
+        <!-- Support Section -->
+        <section id="support_section"></section>
+    </main>
+    <footer>
+        <!-- Footer Section -->
+         <search id="footer_section"></search>
+    </footer>
 </body>
 </html>
