Banner Section Added

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         </nav>
         <!-- Banner Section -->
         <section id="banner_section">
-            <div>
+            <div class="banner_container">
                 <div>
-                    <img src="assets/Hero-bg.png" alt="Hero">
+                    <img src="assets/Group.png" alt="Hero">
                 </div>
                 <div>
-                    <h1>"In the near future, I hope to become a Developer."</h1>
+                    <h1 class="heading1">"In the near future, I hope to become a Developer."</h1>
                 </div>
                 <div>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
                 </div>
                 <div>
                     <button class="button2">Contact with me</button>
