Web Dev Section Added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,46 @@
     </header>
     <main>
         <!-- Web Development Section -->
-        <section id="web_dev_section"></section>
+        <section id="web_dev_section">
+            <div class="web_dev_container">
+                <div class="web_dev_header"> 
+                    <h2 class="heading2 web_dev_heading">Why Web Development??</h2>
+                    <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                </div>
+                <div class="web_dev_card_container">
+                    <div class="web_dev_card_items">
+                        <div class="web_dev_card_item_text">
+                            <h2 class="heading6">I will Do Coding and Change The World</h2>
+                            <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button class="button3">Learn More</button>
+                        </div>
+                        <div>
+                            <img src="assets/Layer_1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="web_dev_card_items">
+                        <div>
+                            <img src="assets/Group 3.png" alt="">
+                        </div>
+                        <div class="web_dev_card_item_text">
+                            <h2 class="heading6">I will help People by creating Modern Web System</h2>
+                            <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button class="button3">Learn More</button>
+                        </div>
+                    </div>
+                    <div class="web_dev_card_items">
+                        <div class="web_dev_card_item_text">
+                            <h2 class="heading6">I will Do Coding and Change The World</h2>
+                            <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button class="button3">Learn More</button>
+                        </div>
+                        <div>
+                            <img src="assets/Group 4.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- My Inspiration Section -->
         <section id="my_inspiration_section"></section>
         <!-- My Current Target Section -->
