My Insparation Section Added

--- a/index.html
+++ b/index.html
@@ -85,7 +85,15 @@
             </div>
         </section>
         <!-- My Inspiration Section -->
-        <section id="my_inspiration_section"></section>
+        <section id="my_inspiration_section">
+            <div class="my_inspiration_content">
+                <h3 class="heading2">My Inspiration</h3>
+                <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <div class="iframe_container">
+                <iframe  src="https://www.youtube.com/embed/DGHn2uOAVCE?si=IhXKQL7q5sb0UHcn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
         <!-- My Current Target Section -->
         <section id="my_current_target_section"></section>
         <!-- My Next Target Section -->
