My Current Section Added

--- a/index.html
+++ b/index.html
@@ -95,7 +95,32 @@
             </div>
         </section>
         <!-- My Current Target Section -->
-        <section id="my_current_target_section"></section>
+        <section id="my_current_target_section">
+            <div class="my_current_target_section_header">
+                <h2 class="heading2">My Current Target</h2>
+                <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <div class="my_current_target_section_card_container">
+                <div class="my_current_target_section_card_item card_color_1">
+                    <img src="assets/html.png" alt="HTML">
+                    <h3 class="heading5">HTML</h3>
+                    <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <h4>Learn More</h4>
+                </div>
+                <div class="my_current_target_section_card_item card_color_2">
+                    <img src="assets/html.png" alt="HTML">
+                    <h3 class="heading5">HTML</h3>
+                    <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <h4>Learn More</h4>
+                </div>
+                <div class="my_current_target_section_card_item card_color_3">
+                    <img src="assets/html.png" alt="HTML">
+                    <h3 class="heading5">HTML</h3>
+                    <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <h4>Learn More</h4>
+                </div>
+            </div>
+        </section>
         <!-- My Next Target Section -->
         <section id="my_next_target_section"></section>
         <!-- Support Section -->
