MY Next Target Section Added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +10,12 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <!-- style.css liked-->
-     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body class="azeret-mono-font">
     <header>
         <!-- Nav Section -->
@@ -34,7 +37,8 @@
                     <h1 class="heading1">"In the near future, I hope to become a Developer."</h1>
                 </div>
                 <div>
-                    <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text.</p>
                 </div>
                 <div>
                     <button class="button2">Contact with me</button>
@@ -46,15 +50,17 @@
         <!-- Web Development Section -->
         <section id="web_dev_section">
             <div class="web_dev_container">
-                <div class="web_dev_header"> 
+                <div class="web_dev_header">
                     <h2 class="heading2 web_dev_heading">Why Web Development??</h2>
-                    <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text.</p>
                 </div>
                 <div class="web_dev_card_container">
                     <div class="web_dev_card_items">
                         <div class="web_dev_card_item_text">
                             <h2 class="heading6">I will Do Coding and Change The World</h2>
-                            <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                industry.</p>
                             <button class="button3">Learn More</button>
                         </div>
                         <div>
@@ -67,14 +73,16 @@
                         </div>
                         <div class="web_dev_card_item_text">
                             <h2 class="heading6">I will help People by creating Modern Web System</h2>
-                            <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                industry.</p>
                             <button class="button3">Learn More</button>
                         </div>
                     </div>
                     <div class="web_dev_card_items">
                         <div class="web_dev_card_item_text">
                             <h2 class="heading6">I will Do Coding and Change The World</h2>
-                            <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                industry.</p>
                             <button class="button3">Learn More</button>
                         </div>
                         <div>
@@ -88,17 +96,22 @@
         <section id="my_inspiration_section">
             <div class="my_inspiration_content">
                 <h3 class="heading2">My Inspiration</h3>
-                <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                    Ipsum has been the industry's standard dummy text.</p>
             </div>
             <div class="iframe_container">
-                <iframe  src="https://www.youtube.com/embed/DGHn2uOAVCE?si=IhXKQL7q5sb0UHcn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/DGHn2uOAVCE?si=IhXKQL7q5sb0UHcn" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
         <!-- My Current Target Section -->
         <section id="my_current_target_section">
             <div class="my_current_target_section_header">
                 <h2 class="heading2">My Current Target</h2>
-                <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                    Ipsum has been the industry's standard dummy text.</p>
             </div>
             <div class="my_current_target_section_card_container">
                 <div class="my_current_target_section_card_item card_color_1">
@@ -122,13 +135,52 @@
             </div>
         </section>
         <!-- My Next Target Section -->
-        <section id="my_next_target_section"></section>
+        <section id="my_next_target_section">
+            <div class="my_next_target_section_header">
+                <h2 class="heading2">My Next Target</h2>
+                <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                    Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <div class="my_next_target_section_card_container">
+                <div class="my_next_target_section_card_item">
+                    <div>
+                        <img src="assets/react.png" alt="React">
+                    </div>
+                    <div>
+                        <h3 class="heading5">React Js</h3>
+                        <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <h4>Learn More</h4>
+                    </div>
+                </div>
+                <div class="my_next_target_section_card_item">
+                    <div>
+                        <img src="assets/react.png" alt="React">
+                    </div>
+                    <div>
+                        <h3 class="heading5">React Js</h3>
+                        <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <h4>Learn More</h4>
+                    </div>
+                </div>
+                <div class="my_next_target_section_card_item">
+                    <div>
+                        <img src="assets/react.png" alt="React">
+                    </div>
+                    <div>
+                        <h3 class="heading5">React Js</h3>
+                        <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <h4>Learn More</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Support Section -->
         <section id="support_section"></section>
     </main>
     <footer>
         <!-- Footer Section -->
-         <search id="footer_section"></search>
+        <search id="footer_section"></search>
     </footer>
 </body>
+
 </html>
