Support Section Added

--- a/index.html
+++ b/index.html
@@ -175,7 +175,18 @@
             </div>
         </section>
         <!-- Support Section -->
-        <section id="support_section"></section>
+        <section id="support_section">
+            <div class="support_section_header">
+                <h2 class="heading3">I Need Support</h2>
+                <p class="paragraph2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div>
+                <form>
+                    <input type="text" placeholder="Suggest me any feedback for me">
+                    <button class="button4">Submit</button>
+                </form>
+            </div>
+        </section>
     </main>
     <footer>
         <!-- Footer Section -->
