Footer Section Added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Nav Section -->
         <nav id="nav_container">
             <div>
-                <h2 class="heading4">Md. Tamim</h2>
+                <h2 class="heading4">Awlad.H</h2>
             </div>
             <div>
                 <button class="button1">Download Resume</button>
@@ -121,14 +121,14 @@
                     <h4>Learn More</h4>
                 </div>
                 <div class="my_current_target_section_card_item card_color_2">
-                    <img src="assets/html.png" alt="HTML">
-                    <h3 class="heading5">HTML</h3>
+                    <img src="assets/css.png" alt="CSS">
+                    <h3 class="heading5">CSS</h3>
                     <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing.</p>
                     <h4>Learn More</h4>
                 </div>
                 <div class="my_current_target_section_card_item card_color_3">
-                    <img src="assets/html.png" alt="HTML">
-                    <h3 class="heading5">HTML</h3>
+                    <img src="assets/js.png" alt="HTML">
+                    <h3 class="heading5">JavaScript</h3>
                     <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing.</p>
                     <h4>Learn More</h4>
                 </div>
@@ -154,20 +154,20 @@
                 </div>
                 <div class="my_next_target_section_card_item">
                     <div>
-                        <img src="assets/react.png" alt="React">
+                        <img src="assets/nodejs.png" alt="React">
                     </div>
                     <div>
-                        <h3 class="heading5">React Js</h3>
+                        <h3 class="heading5">Node Js</h3>
                         <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
                         <h4>Learn More</h4>
                     </div>
                 </div>
                 <div class="my_next_target_section_card_item">
                     <div>
-                        <img src="assets/react.png" alt="React">
+                        <img src="assets/mongodb.png" alt="React">
                     </div>
                     <div>
-                        <h3 class="heading5">React Js</h3>
+                        <h3 class="heading5">MongoDB</h3>
                         <p class="paragraph1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
                         <h4>Learn More</h4>
                     </div>
@@ -190,7 +190,16 @@
     </main>
     <footer>
         <!-- Footer Section -->
-        <search id="footer_section"></search>
+        <search id="footer_section">
+            <div class="footer_section_text">
+                <h3>An Open Commitment by Awlad Hossain</h3> 
+            </div>
+            <div class="footer_section_image">
+                <img src="assets/facebook.png" alt="Facebook">
+                <img src="assets/github.png" alt="Github">
+                <img src="assets/linkedin-icon 1.png" alt="Linkedin">
+            </div>
+        </search>
     </footer>
 </body>
 
